[package]
name = "lycan"
version = "0.1.0"
authors = ["Vaelden <maugan.villatel@gmail.com>"]
build = "build.rs"

[lib]
name="lycan"
path="src/lib.rs"

[dependencies]
lazy_static = "0.1"
log = "0.3"
env_logger = "0.3"
rustc-serialize = "0.3"
time = "0.1"
mio = "0.5"
byteorder = "0.4"
threadpool = "0.2"
docopt = "0.6"
nalgebra = "0.5"
smallvec = "0.1"
rand = "0.3"
hyper = "0.8"
bytes = "0.3"
serde = "0.7"
serde_json = "0.7"

# Iron and related crates
iron = "0.3"
mount = "0.1.0"
router = "*"
bodyparser = "*"
plugin = "*"
modifier = "*"
iron-error-router = "*"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies.lycan-serialize]
git = "https://github.com/Greenpix/lycan-serialize.git"

[dependencies.aariba]
git = "https://github.com/GreenPix/aariba.git"

[dependencies.behaviour-tree]
git = "https://github.com/GreenPix/behaviour-tree.git"

[[bin]]
name = "lycan"
doc = false

[features]
json = ["lycan-serialize/json"]

default = ["json", "iron/ssl"]
